# azure-http-proxy

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: cmake.yml
example/: client.json  server.json
src/: authentication.cpp  authentication.hpp  base64.cpp  base64.hpp  encrypt.hpp  hash_utils.cpp  hash_utils.hpp  http_chunk_checker.hpp  http_header_parser.cpp  http_header_parser.hpp  http_proxy_client.cpp  http_proxy_client.hpp  http_proxy_client_config.cpp  http_proxy_client_config.hpp  http_proxy_client_connection.cpp  http_proxy_client_connection.hpp  http_proxy_client_main.cpp  http_proxy_client_stat.cpp  http_proxy_client_stat.hpp  http_proxy_server.cpp  http_proxy_server.hpp  http_proxy_server_config.cpp  http_proxy_server_config.hpp  http_proxy_server_connection.cpp  http_proxy_server_connection.hpp  http_proxy_server_connection_context.hpp  http_proxy_server_main.cpp  key_generator.hpp  version.hpp
src/configs/: ahp_mbedtls_config.h
src/curi/: curi.c  curi.h
